--- a/db/build.gradle
+++ b/db/build.gradle
@@ -20,8 +20,8 @@ liquibase {
     activities {
         main {
             changeLogFile changeLog
-            url 'jdbc:h2:/home/schiu/IdeaProjects/GCViewer/db/db/gclog'
-            username 'admin'
+            url 'jdbc:postgresql://host:5432/db'
+            username 'user'
             password 'password'
         }
 
